# APNM

./: .gitignore  CMakeLists.txt  Makefile  README.md  nm_to_website.example.json  website_to_nm.example.json
gpio/: gpio.cpp  gpio.hpp  socket.cpp
include/: README.md  prototype.h
internet/: package-lock.json
internet/public/: index.html
internet/src/: login.vue
socket/: socket.cpp
src/: main.cpp  main1.cpp  main2.cpp  main3.cpp
src/ara/com/: com_set_handler.hpp  fakecom.hpp
src/ara/core/: error_code.h  future.h  instance_specifier.h  result.h  vector.h
src/ara/nm/: IStateMachine.hpp  NetworkStateType.hpp  NetworkState_Handle0Impl.cpp  NetworkState_Handle0Impl.hpp  NetworkState_Handle0Skeleton.cpp  NetworkState_Handle0Skeleton.hpp  NetworkState_Handle1Impl.cpp  NetworkState_Handle1Impl.hpp  NetworkState_Handle1Skeleton.cpp  NetworkState_Handle1Skeleton.hpp  NetworkState_HandleImpl.cpp  NetworkState_HandleImpl.hpp  NetworkState_HandleSkeleton.cpp  NmConfigReader.hpp  nm.cpp  nm.hpp
ws/: ws.cpp  ws.hpp
